--- a/public/index.html
+++ b/public/index.html
@@ -3,33 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Minesweeper</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="../public/css/main.css">
 </head>
 <body>
-<h1>Minesweeper</h1>
-<div>
-    <div>
-        <label for="rows">Rows: </label> <input type="integer" value="9" id="rows" name="rows">
-    </div>
-    <div>
-        <label for="cols">Columns: </label> <input type="integer" value="9" id="cols" name="cols">
-    </div>
-    <div>
-        <label for="bombs">Bombs: </label> <input type="integer" id="bombs" name="bombs" value="10">
-    </div>
-    <div>
-        <button id="new-game-btn">New Game</button>
-    </div>
-</div>
-<div>
-    <div id="board-title"></div>
-    <table id="board">
-        <tbody id="board-body"></tbody>
-    </table>
-</div>
-
-<script src="../public/js/main.js"></script>
+<div id="root"></div>
+<script src="./dist/bundle.js"></script>
 </body>
 </html>
 
