--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Minesweeper</title>
-    <link rel="stylesheet" href="../public/css/main.css">
 </head>
 <body>
-<div id="root"></div>
-<script src="./dist/bundle.js"></script>
+<div id="App"></div>
 </body>
 </html>
 
